--- a/GrantMap/index.css
+++ b/GrantMap/index.css
@@ -3,3 +3,16 @@
     font-size: 0.75em;
     transform: rotate(45deg);
 }
+
+.tooltip {
+  position: absolute;
+  padding: 10px;
+  color: #fff;
+  background-color: #b8b8b8;
+  opacity: 0;
+  border-radius: 5px;
+}
+
+.label {
+  color: #0050A1;
+}
